Fixed bug in evaluation code for CRF, and SVR and add test for XTSeries and Stats